# prefpicker-monitor

./: .pre-commit-config.yaml  .taskcluster.yml  CHANGELOG.md  README.md  pyproject.toml
prefmonitor/: main.py
tests/: test_prefmonitor.py
